kubernetes/Ingress-yaml-file/idream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idream-ingress
spec:
  ingressClassName: nginx    # Add this line
  rules:
    - host: idream.demo.com
      http:
        paths:
          - path: /idream1
            pathType: Prefix
            backend:
              service:
                name: idream1-service
                port:
                  number: 80
          - path: /idream2
            pathType: Prefix
            backend:
              service:
                name: idream2-service
                port:
                  number: 80
          - path: /idream3
            pathType: Prefix
            backend:
              service:
                name: idream3-service
                port:
                  number: 80
